# pokengine

./: CMakeLists.txt  Makefile  todo.txt
data/: pokemon.json
src/: ability.h  battle.cpp  battle.h  effect.h  field.h  item.h  log.cpp  move.cpp  move.h  pokemon.cpp  pokemon.h  type.cpp  type.h
src/engine/: ability.cpp  ability.h  battle.cpp  battle.h  dtypes.h  effect.cpp  effect.h  enumops.h  field.cpp  field.h  item.cpp  item.h  log.cpp  log.h  move.cpp  move.h  pokemon.cpp  pokemon.h  type.cpp  type.h
src/teambuilder/: basebuilder.h  loadpokemon.cpp  loadpokemon.h  movebuilder.h  pokemonbuilder.cpp  pokemonbuilder.h
test/: main.cpp
